# wcosmo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  wcosmo_gwtc3.ipynb
.github/workflows/: pages.yml  release.yaml  unittest.yml
doc/: .readthedocs.yaml  index.rst  pages_requirements.txt
doc/source/: conf.py  index.rst
doc/source/_static/: switcher.json
doc/source/api/: analytic.rst  astropy.rst  index.rst  integrate.rst  taylor.rst  utils.rst  wcosmo.rst
doc/source/examples/: index.rst
examples/: comparisons.ipynb  integration_method_comparisons.ipynb  wcosmo_gwtc3.ipynb  wcosmo_timing.ipynb
wcosmo/: __init__.py  _hyp2f1_jax.py  _version.py  analytic.py  astropy.py  constants.py  integrate.py  models.py  taylor.py  utils.py  wcosmo.py
wcosmo/backend/: __init__.py  cupy.py  jax.py
wcosmo/test/: conftest.py  test_astropy.py  test_constants.py  test_cosmo.py  test_utils.py
