[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wcosmo"
authors = [
    {name = "Colm Talbot", email = "talbotcolm@gmail.com"},
    {name = "Amanda Farah"},
]
description = "A package for cosmology calculations with arbitrary numpy-like APIs"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy>=6.1",
    "plum-dispatch",
    "array-api-compat",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest-cov",
    "jax>=0.4.34",
    "unxt",
]
jax = [
    "jax>=0.4.34",
    "unxt",
]

[tool.setuptools]
packages = ["wcosmo"]

[tool.setuptools_scm]
write_to = "wcosmo/_version.py"
